Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/fixtures/index.html
+++ b/backend/fixtures/index.html
@@ -47,6 +47,10 @@
 <section>
 <h2 class="section-title" id="header-submodules">Sub-modules</h2>
 <dl>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.api_client" href="api_client.html">harvester_e2e_tests.fixtures.api_client</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.api_endpoints" href="api_endpoints.html">harvester_e2e_tests.fixtures.api_endpoints</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -117,6 +121,7 @@
 </li>
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
+<li><code><a title="harvester_e2e_tests.fixtures.api_client" href="api_client.html">harvester_e2e_tests.fixtures.api_client</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.api_endpoints" href="api_endpoints.html">harvester_e2e_tests.fixtures.api_endpoints</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.api_version" href="api_version.html">harvester_e2e_tests.fixtures.api_version</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.backuptarget" href="backuptarget.html">harvester_e2e_tests.fixtures.backuptarget</a></code></li>
