--- a/backend/apis/test_images.html
+++ b/backend/apis/test_images.html
@@ -246,7 +246,9 @@ def test_create_with_invalid_url(api_client, unique_name):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">class TestImages:
+<pre><code class="python">@pytest.mark.p0
+@pytest.mark.images
+class TestImages:
     @pytest.mark.dependency(name=&#34;create_image&#34;)
     def test_create(self, api_client, unique_name, fake_image_file):
         resp = api_client.images.create_by_file(unique_name, fake_image_file)
@@ -473,7 +475,10 @@ def test_get(self, api_client, unique_name):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">class TestImagesNegative:
+<pre><code class="python">@pytest.mark.p0
+@pytest.mark.negative
+@pytest.mark.images
+class TestImagesNegative:
     def test_get_not_exist(self, api_client, unique_name):
         code, data = api_client.images.get(unique_name)
 
