Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/conftest.html
+++ b/backend/conftest.html
@@ -275,7 +275,7 @@ def pytest_configure(config):
         (&#34;templates&#34;, (&#34;marker to run VM template tests&#34;)),
         (&#34;support_bundle&#34;, (&#34;marker to run Support Bundle tests&#34;)),
         (&#34;settings&#34;, (&#34;marker to run settings tests&#34;)),
-        (&#34;upgrade&#34;, (&#34;marker to run the upgrade tests&#34;))
+        (&#34;upgrade&#34;, (&#34;marker to run upgrade tests&#34;))
     ]
 
     for m, msg in markers:
@@ -646,7 +646,7 @@ def pytest_collection_modifyitems(config, items):
         (&#34;templates&#34;, (&#34;marker to run VM template tests&#34;)),
         (&#34;support_bundle&#34;, (&#34;marker to run Support Bundle tests&#34;)),
         (&#34;settings&#34;, (&#34;marker to run settings tests&#34;)),
-        (&#34;upgrade&#34;, (&#34;marker to run the upgrade tests&#34;))
+        (&#34;upgrade&#34;, (&#34;marker to run upgrade tests&#34;))
     ]
 
     for m, msg in markers:
