--- a/backend/fixtures/index.html
+++ b/backend/fixtures/index.html
@@ -67,6 +67,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.images" href="images.html">harvester_e2e_tests.fixtures.images</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.keypair" href="keypair.html">harvester_e2e_tests.fixtures.keypair</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -126,6 +130,7 @@
 <li><code><a title="harvester_e2e_tests.fixtures.api_version" href="api_version.html">harvester_e2e_tests.fixtures.api_version</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.backuptarget" href="backuptarget.html">harvester_e2e_tests.fixtures.backuptarget</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.image" href="image.html">harvester_e2e_tests.fixtures.image</a></code></li>
+<li><code><a title="harvester_e2e_tests.fixtures.images" href="images.html">harvester_e2e_tests.fixtures.images</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.keypair" href="keypair.html">harvester_e2e_tests.fixtures.keypair</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.network" href="network.html">harvester_e2e_tests.fixtures.network</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.session" href="session.html">harvester_e2e_tests.fixtures.session</a></code></li>
