--- a/backend/conftest.html
+++ b/backend/conftest.html
@@ -109,6 +109,12 @@ def pytest_addoption(parser):
         help=(&#39;Windows image URL &#39;)
     )
     parser.addoption(
+        &#39;--opensuse-image-url&#39;,
+        action=&#39;store&#39;,
+        default=config_data.get(&#39;opensuse-image-url&#39;),
+        help=(&#39;OpenSUSE image URL&#39;)
+    )
+    parser.addoption(
         &#39;--terraform-scripts-location&#39;,
         action=&#39;store&#39;,
         default=config_data[&#39;terraform-scripts-location&#39;],
@@ -273,6 +279,7 @@ def pytest_configure(config):
         (&#34;networks&#34;, (&#34;marker to run vlan network tests&#34;)),
         (&#34;volumes&#34;, (&#34;marker to run volume tests&#34;)),
         (&#34;templates&#34;, (&#34;marker to run VM template tests&#34;)),
+        (&#34;virtualmachines&#34;, (&#34;marker to run VM tests&#34;)),
         (&#34;support_bundle&#34;, (&#34;marker to run Support Bundle tests&#34;)),
         (&#34;settings&#34;, (&#34;marker to run settings tests&#34;)),
         (&#34;upgrade&#34;, (&#34;marker to run upgrade tests&#34;))
@@ -409,6 +416,12 @@ def pytest_collection_modifyitems(config, items):
         action=&#39;store&#39;,
         default=config_data[&#39;win-image-url&#39;],
         help=(&#39;Windows image URL &#39;)
+    )
+    parser.addoption(
+        &#39;--opensuse-image-url&#39;,
+        action=&#39;store&#39;,
+        default=config_data.get(&#39;opensuse-image-url&#39;),
+        help=(&#39;OpenSUSE image URL&#39;)
     )
     parser.addoption(
         &#39;--terraform-scripts-location&#39;,
@@ -644,6 +657,7 @@ def pytest_collection_modifyitems(config, items):
         (&#34;networks&#34;, (&#34;marker to run vlan network tests&#34;)),
         (&#34;volumes&#34;, (&#34;marker to run volume tests&#34;)),
         (&#34;templates&#34;, (&#34;marker to run VM template tests&#34;)),
+        (&#34;virtualmachines&#34;, (&#34;marker to run VM tests&#34;)),
         (&#34;support_bundle&#34;, (&#34;marker to run Support Bundle tests&#34;)),
         (&#34;settings&#34;, (&#34;marker to run settings tests&#34;)),
         (&#34;upgrade&#34;, (&#34;marker to run upgrade tests&#34;))
